fixing spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,6 +69,7 @@ h1 {
 .container, .row {
   text-align: center;
 }
+
 .container {
   max-width: 940px;
   margin: 0 auto;
@@ -339,6 +340,10 @@ h1 {
   color: #fff;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.spacing {
+  margin-bottom: 10px;
 }
 
 @media (max-width: 1000px) {
